--- a/microservice-gateway-zuul/src/main/resources/application.yml
+++ b/microservice-gateway-zuul/src/main/resources/application.yml
@@ -18,3 +18,9 @@ routes:
   admin-service:
     path: /admin-service/**
     serviceId: admin-service
+  reservation-service:
+    path: /reservation-service/**
+    serviceId: reservation-service
+ribbon:
+  ConnectTimeout: 5000
+  ReadTimeout: 5000
