--- a/microservice-reservationservice/src/main/resources/application.yml
+++ b/microservice-reservationservice/src/main/resources/application.yml
@@ -18,7 +18,7 @@ service-url:
   defaultZone: http://localhost:8761/eureka/
 #      上线测试需要使用以下配置
 #      defaultZone: http://eureka-server:8761/eureka/
-ORDERSERVICEURL: http://reservation-service/
+ORDERSERVICEURL: http://order-service/
 
 ## redis配置
 redis:
@@ -27,7 +27,7 @@ redis:
 
 logging:
   level:
-    com.bdc.reservationService: debug
+    com.bdc.userService: debug
 
 ignored:
   urls: #安全路径白名单
@@ -42,6 +42,6 @@ ignored:
 
 jwt:
   tokenHeader: Authorization #JWT存储的请求头
-  sign: user-su #JWT加解密使用的密钥
+  sign: reservation-su #JWT加解密使用的密钥
   expireTime: 30 #jwtToken的默认有效时间 单位分钟
   tokenHead: 'Bearer '  #JWT负载中拿到开头
