--- a/microservice-gateway-zuul/pom.xml
+++ b/microservice-gateway-zuul/pom.xml
@@ -23,6 +23,16 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <!--Spring Boot的编译插件 -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
