--- a/microservice-reservationservice/pom.xml
+++ b/microservice-reservationservice/pom.xml
@@ -91,6 +91,17 @@
 
     </dependencies>
 
+
+    <build>
+        <plugins>
+            <!--Spring Boot的编译插件 -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
